# ssd

./: .gitattributes  .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
.trunk/: trunk.yaml
models/: best.pt  summary.md
scripts/: infer.py  train.py  wandb_tester.py
scripts/notebooks/: data_augmentation.ipynb  evaluate.ipynb  evaluate_v2.ipynb  infer.ipynb  investigate_anchors_iou.ipynb  letterbox.ipynb  tensor_experiments.ipynb  train.ipynb  visualise_model_detections.ipynb
src/ssd/: __init__.py  anchor_box_generator.py  ssd.py  ssd_backbone.py
src/ssd/data/: __init__.py  data_augmenter.py  letterbox_transform.py  remove_invalid_boxes_transform.py  ssd_dataset.py
src/ssd/structs/: __init__.py  frame_detections.py  frame_labels.py  losses.py  precision_recall_curve_data.py  train_config.py
src/ssd/utils/: __init__.py  box_utils.py  metrics.py  metrics_calculator.py  train_utils.py  weights_and_biases_logger.py
tests/: test_anchor_box_generator.py  test_ssd.py
tests/data/: test_data_augmenter.py  test_letterbox_transform.py  test_remove_invalid_boxes_transform.py  test_ssd_dataset.py
tests/utils/: test_box_utils.py  test_metrics.py  test_metrics_calculator.py  test_train_utils.py
