[project]
name = "ssd"
version = "0.1.0"
description = "Re-implementation of the SSD network."
authors = [
    {name = "KyleNewman97", email = "kyle@thenewmans.com.au"},
]
dependencies = ["torch>=2.7.1", "torchvision>=0.22.1", "notebook>=7.4.3", "pydantic>=2.11.7"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "notebook>=7.4.3",
]
